# RustDocSearch

./: Cargo.toml  LICENSE  README.md  txt.txt
index/: .managed.json  meta.json
meta/: db  snap.00000000000E6162
src/: main v0.1.rs  main v1.0.rs  main v2.0.rs  main.rs
